--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.47", features = ["derive"] }
+glob = "0.3.3"
 rand = "0.9.2"
 sha2 = "0.10.9"
 tempfile = "3.22.0"
